modify code; tree

--- a/Tree/098.validate-binary-search-tree.md
+++ b/Tree/098.validate-binary-search-tree.md
@@ -71,43 +71,24 @@ Explanation: The input is: [5,1,4,null,null,3,6]. The root node&#39;s value
 ### 解法
 中序遍历, 每次判断当前节点的值是否大于上一节点的值. 需存上一节点的值. 注意边界, 值用long比较好.
 ```c++
-/**
- * Definition for a binary tree node.
- * struct TreeNode {
- *     int val;
- *     TreeNode *left;
- *     TreeNode *right;
- *     TreeNode(int x) : val(x), left(NULL), right(NULL) {}
- * };
- */
 class Solution {
 public:
     bool isValidBST(TreeNode* root) {
-        if (!root) {
-            return true;
-        }
-        
-        long prev = long(INT_MIN) - 1;
-        return preOrder(root, prev);
+        TreeNode *prev = NULL;
+        return inorder(root, prev);
     }
     
-    bool preOrder(TreeNode *root, long &prev) {
-        int leftFlag = true, rightFlag = true;
+    bool inorder(TreeNode *root, TreeNode *&prev) {
+        if (!root) return true;
+        bool flag = inorder(root->left, prev);
         
-        if (root->left) {
-            leftFlag = preOrder(root->left, prev);
+        if (flag) {
+            if (prev) flag = root->val > prev->val;
+            prev = root;
+            if (flag) flag = inorder(root->right, prev);
         }
         
-        if (long(root->val) <= prev) {
-            return false;
-        }
-        prev = root->val;
-        
-        if (root->right) {
-            rightFlag = preOrder(root->right, prev);
-        }
-        
-        return leftFlag && rightFlag;
+        return flag;
     }
 };
 ```
