--- a/Tree/099.recover-binary-search-tree.md
+++ b/Tree/099.recover-binary-search-tree.md
@@ -95,28 +95,23 @@ Follow up:
 class Solution {
 public:
     void recoverTree(TreeNode* root) {
-        TreeNode *prev = NULL, *firstNode = NULL, *secondNode = NULL;
-        inOrder(root, prev, firstNode, secondNode);
-        
-        swap (firstNode->val, secondNode->val);
+        TreeNode *first = NULL, *second = NULL, *prev = NULL;
+        inorder(root, first, second, prev);
+        swap(first->val, second->val);
     }
     
-    void inOrder(TreeNode *root, TreeNode *&prev, TreeNode *&first, TreeNode *&second) {
-        if (!root) {
-            return;
-        }
+    void inorder(TreeNode *root, TreeNode *&first, TreeNode *&second, TreeNode *&prev) {
+        if (!root) return;
         
-        inOrder(root->left, prev, first, second);
+        inorder(root->left, first, second, prev);
         
-        if (!first && prev && prev->val >= root->val) {
-            first = prev;
+        if (prev) {
+            if (root->val <= prev->val && !first) first = prev;
+            if (root->val <= prev->val && first) second = root;
         }
-        if (first && prev && prev->val >= root->val) {
-        	second = root;
-        }
-        prev = root;        
+        prev = root;
         
-        inOrder(root->right, prev, first, second);
+        inorder(root->right, first, second, prev);        
     }
 };
 ```
