--- a/Tree/101.symmetric-tree.md
+++ b/Tree/101.symmetric-tree.md
@@ -57,7 +57,7 @@ But the following [1,2,2,null,3,null,3]  is not:
 Bonus points if you could solve it both recursively and iteratively.
 
 ### 解法
-递归: 判断左遍历是否等于右遍历
+递归: 判断左右子树是否对称相等, 则转化为类似判断相等树(100)问题.
 ```c++
 class Solution {
 public:
@@ -66,16 +66,10 @@ public:
     }
     
     bool isSymmetricEqual(TreeNode *root1, TreeNode *root2) {
-        if (!root1 && !root2) {
-            return true;
-        }
-        if (!root1 || !root2) {
-            return false;
-        }
-        if (root1->val != root2->val) {
-            return false;
-        }
-        return isSymmetricEqual(root1->left, root2->right) && isSymmetricEqual(root1->right, root2->left);
+        if (!root1 && !root2) return true;
+        if (!root1 || !root2) return false;
+        return root1->val == root2->val &&
+            isSymmetricEqual(root1->left, root2->right) && isSymmetricEqual(root1->right, root2->left);
     }
 };
 ```
