--- a/Tree/103.binary-tree-zigzag-level-order-traversal.md
+++ b/Tree/103.binary-tree-zigzag-level-order-traversal.md
@@ -57,33 +57,37 @@ return its zigzag level order traversal as:
 ```c++
 class Solution {
 public:
-	vector<vector<int> > zigzagLevelOrder(TreeNode *root) {
-		vector<vector<int> > res;
-		if (!root) return res;
-		stack<TreeNode*> levels[2];
-		int curr = 0, next = 1;
-		levels[0].push(root);
-		vector<int> line;
-		while (!levels[0].empty() || !levels[1].empty()) {
-			TreeNode *node = levels[curr].top();
-			levels[curr].pop();
-			line.emplace_back(node->val);
-			if (!curr) {
-				if (node->left) levels[next].push(node->left);
-				if (node->right) levels[next].push(node->right);
-			}
-			else {
-				if (node->right) levels[next].push(node->right);
-				if (node->left) levels[next].push(node->left);
-			}
-			if (levels[curr].empty()) {
-				res.emplace_back(line);
-				line.clear();
-				curr = next;
-				next = 1 - next;
-			}
-		}
-		return res;
-	}
+    vector<vector<int>> zigzagLevelOrder(TreeNode* root) {
+        vector<vector<int> > res;
+        if (!root) return res;
+        
+        stack<TreeNode*> s[2];
+        s[0].push(root);
+        int flag = 0;
+        vector<int> level;
+        
+        while (!s[0].empty() || !s[1].empty()) {
+            TreeNode *cur = s[flag].top();
+            s[flag].pop();
+            level.push_back(cur->val);
+            
+            if (!flag) {
+                if (cur->left) s[!flag].push(cur->left);
+                if (cur->right) s[!flag].push(cur->right);
+            }
+            else {
+                if (cur->right) s[!flag].push(cur->right);
+                if (cur->left) s[!flag].push(cur->left);
+            }
+            
+            if (s[flag].empty()) {
+                res.push_back(level);
+                level.clear();
+                flag = !flag;
+            }
+        }
+        
+        return res;
+    }
 };
 ```
