--- a/Tree/105.construct-binary-tree-from-preorder-and-inorder-traversal.md
+++ b/Tree/105.construct-binary-tree-from-preorder-and-inorder-traversal.md
@@ -48,36 +48,31 @@ Return the following binary tree:
 ```
 
 ### 解法
-类似106, 找根后递归重建两边.
+使用一个map存中序遍历节点的下标. 每次找到根节点下标, 计算左右子树长度, 并递归构建.
+
 ```c++
 class Solution {
 public:
     TreeNode* buildTree(vector<int>& preorder, vector<int>& inorder) {
         unordered_map<int, int> i_index;
-        for (int i = 0; i < inorder.size(); i++) {
+        int n = inorder.size();
+        for (int i = 0; i < n; i++) {
             i_index[inorder[i]] = i;
         }
-        return build(preorder, inorder, 0, int(preorder.size())-1, 0, int(inorder.size())-1, i_index);
+        return build(preorder, inorder, i_index, 0, 0, n);
     }
-    TreeNode *build(vector<int> &preorder, vector<int> &inorder, 
-                    int p_begin, int p_end, int i_begin, int i_end,
-                    unordered_map<int, int> &i_index) {
-        if (p_begin > p_end || i_begin > i_end) {
-            return NULL;
-        }
-        int root_val = preorder[p_begin];
-        int i_root_index = i_index[root_val];
-        int l_p_begin = p_begin + 1;
-        int l_p_end = p_begin + i_root_index - i_begin;
-        int r_p_begin = l_p_end + 1;
-        int r_p_end = p_end;
-        int l_i_begin = i_begin;
-        int l_i_end = i_root_index - 1;
-        int r_i_begin = i_root_index + 1;
-        int r_i_end = i_end;
-        TreeNode *root = new TreeNode(root_val);
-        root->left = build(preorder, inorder, l_p_begin, l_p_end, l_i_begin, l_i_end, i_index);
-        root->right = build(preorder, inorder, r_p_begin, r_p_end, r_i_begin, r_i_end, i_index);
+    
+    TreeNode* build(vector<int> &pre, vector<int> &in, unordered_map<int,int> &i_index, int p_begin, int i_begin, int len) {
+        if (len <= 0) return NULL;
+        
+        TreeNode *root = new TreeNode(pre[p_begin]);
+        int i_root_index = i_index[pre[p_begin]];
+        int left_len = i_root_index - i_begin, right_len = len - left_len - 1;
+        
+        root->left = build(pre, in, i_index, p_begin + 1, i_begin, left_len);
+        root->right = build(pre, in, i_index, p_begin + left_len + 1, i_root_index + 1, right_len);
+        
         return root;
     }
 };
+```
