--- a/Tree/106.construct-binary-tree-from-inorder-and-postorder-traversal.md
+++ b/Tree/106.construct-binary-tree-from-inorder-and-postorder-traversal.md
@@ -50,53 +50,30 @@ Return the following binary tree:
 
 
 ### 解法
-找到根节点, 判断左右子树数组位置和长度
+同上, 找到根节点位置, 计算左右长度, 递归构建. 
 ```c++
-/**
- * Definition for a binary tree node.
- * struct TreeNode {
- *     int val;
- *     TreeNode *left;
- *     TreeNode *right;
- *     TreeNode(int x) : val(x), left(NULL), right(NULL) {}
- * };
- */
 class Solution {
 public:
     TreeNode* buildTree(vector<int>& inorder, vector<int>& postorder) {
-        if (inorder.size() != postorder.size()) {
-            return NULL;
+        int n = inorder.size();
+        unordered_map<int,int> i_index;
+        for (int i = 0; i < n; i++) {
+            i_index[inorder[i]] = i;
         }
         
-        int n = inorder.size();
-        return build(inorder, postorder, 0, n-1, 0, n-1);
+        return build(inorder, postorder, i_index, 0, 0, n);
     }
     
-    TreeNode *build(vector<int> &in, vector<int> &post, int iBegin, int iEnd, int pBegin, int pEnd) {
-        if (iBegin > iEnd || pBegin > pEnd || iEnd - iBegin != pEnd - pBegin) {
-            return NULL;
-        }
+    TreeNode* build(vector<int> &inorder, vector<int> &postorder, unordered_map<int,int> &i_index, 
+                    int p_begin, int i_begin, int len) {
+        if (len <= 0) return NULL;
         
-        TreeNode *root = new TreeNode(post[pEnd]);
-        int inRootIndex = iBegin;
-        for (int i = iBegin + 1; i <= iEnd; i++) {
-            if (in[i] == root->val) {
-                inRootIndex = i;
-                break;
-            }
-        }
-        if (in[inRootIndex] != root->val) {
-            return NULL;
-        }
+        TreeNode *root = new TreeNode(postorder[p_begin + len - 1]);
+        int i_root_index = i_index[root->val];
+        int left_len = i_root_index - i_begin, right_len = len - left_len - 1;
         
-        int leftLen = inRootIndex - iBegin;
-        int iLeftBegin = iBegin, iLeftEnd = inRootIndex - 1;
-        int iRightBegin = inRootIndex + 1, iRightEnd = iEnd;
-        int pLeftBegin = pBegin, pLeftEnd = pBegin + leftLen - 1;
-        int pRightBegin = pLeftEnd + 1, pRightEnd = pEnd - 1;
-        
-        root->left = build(in, post, iLeftBegin, iLeftEnd, pLeftBegin, pLeftEnd);
-        root->right = build(in, post, iRightBegin, iRightEnd, pRightBegin, pRightEnd);
+        root->left = build(inorder, postorder, i_index, p_begin, i_begin, left_len);
+        root->right = build(inorder, postorder, i_index, p_begin + left_len, i_root_index + 1, right_len);
         
         return root;
     }
