--- a/Tree/108.convert-sorted-array-to-binary-search-tree.md
+++ b/Tree/108.convert-sorted-array-to-binary-search-tree.md
@@ -41,36 +41,18 @@ One possible answer is: [0,-3,9,-10,null,5], which represents the following heig
 ### 解法
 找中间, 递归建左右
 ```c++
-/**
- * Definition for a binary tree node.
- * struct TreeNode {
- *     int val;
- *     TreeNode *left;
- *     TreeNode *right;
- *     TreeNode(int x) : val(x), left(NULL), right(NULL) {}
- * };
- */
 class Solution {
 public:
     TreeNode* sortedArrayToBST(vector<int>& nums) {
-        int n = nums.size();
-        if (!n) {
-            return NULL;
-        }
-        
-        return build(nums, 0, n-1);
+        return build(nums, 0, int(nums.size()) - 1);
     }
     
-    TreeNode *build(vector<int> &nums, int low, int high) {
-        if (low > high) {
-            return NULL;
-        }
-        
-        int mid = low + (high - low) / 2;
+    TreeNode* build(vector<int> &nums, int low, int high) {
+        if (low > high) return NULL;
+        int mid = (low + high) / 2;
         TreeNode *root = new TreeNode(nums[mid]);
         root->left = build(nums, low, mid - 1);
         root->right = build(nums, mid + 1, high);
-        
         return root;
     }
 };
