--- a/Tree/110.balanced-binary-tree.md
+++ b/Tree/110.balanced-binary-tree.md
@@ -69,46 +69,28 @@ Return false.
 
 
 ### 解法
-dfs, 一边得到树深, 一边判断是否是平衡二叉树. 注意需要左右都是平衡二叉树, 须判断`isBalance(left)` && `isBalance(right)`.
+平衡二叉树定义: 左右子树树深之差不超过1, 且左右子树都为平衡二叉树.
+
+递归计算深度, 但如果不满足平衡二叉树定义则返回-1, 否则返回深度.
 ```c++
-/**
- * Definition for a binary tree node.
- * struct TreeNode {
- *     int val;
- *     TreeNode *left;
- *     TreeNode *right;
- *     TreeNode(int x) : val(x), left(NULL), right(NULL) {}
- * };
- */
 class Solution {
 public:
     bool isBalanced(TreeNode* root) {
-        if (!root) {
-            return true;
-        }
-        
-        int depth = 0;
-        return traverse(root, depth);
+        return getDepth(root) != -1;
     }
     
-    bool traverse(TreeNode *root, int &depth) {
-        if (!root) {
-            depth = 0;
-            return true;
-        }
+    int getDepth(TreeNode *root) {
+        if (!root) return 0;
         
-        int leftDepth, rightDepth;
-        bool leftFlag = traverse(root->left, leftDepth);
-        bool rightFlag = traverse(root->right, rightDepth);
+        int ld = getDepth(root->left);
+        if (ld == -1) return -1;
         
-        depth = max(leftDepth, rightDepth) + 1;
+        int rd = getDepth(root->right);
+        if (rd == -1) return -1;
         
-        if (leftFlag && rightFlag && abs(leftDepth - rightDepth) <= 1) {
-            return true;
-        }
+        if (abs(ld - rd) > 1) return -1;
         
-        
-        return false;        
+        return max(ld, rd) + 1;
     }
 };
 ```
