--- a/Tree/111.minimum-depth-of-binary-tree.md
+++ b/Tree/111.minimum-depth-of-binary-tree.md
@@ -77,10 +77,8 @@ class Solution {
 public:
     int minDepth(TreeNode* root) {
         if (!root) return 0;
-        int leftDepth = minDepth(root->left);
-        int rightDepth = minDepth(root->right);
-        return (!leftDepth ? rightDepth : 
-            (!rightDepth ? leftDepth : min(leftDepth, rightDepth))) + 1;
+        int ld = minDepth(root->left), rd = minDepth(root->right);
+        return (!ld ? rd : (!rd ? ld : min(ld, rd))) + 1;
     }
 };
 ```
