--- a/Tree/112.path-sum.md
+++ b/Tree/112.path-sum.md
@@ -55,15 +55,12 @@ return true, as there exist a root-to-leaf path 5->4->11->2 which sum is 22.
 注: 空节点和叶子节点如上判断可简洁且避免单侧判断错误(如将空节点判断为 partial_sum == target 则可能出现根节点为空判断错误问题; 单侧节点为空而恰巧 partial_sum+ val == target 的问题)
 
 ```c++
-bool hasPathSum(TreeNode* root, int sum) {
-    if (!root) {
-        return false;
+class Solution {
+public:
+    bool hasPathSum(TreeNode* root, int sum) {
+        if (!root) return false;
+        if (!root->left && !root->right) return sum == root->val;
+        return hasPathSum(root->left, sum - root->val) || hasPathSum(root->right, sum - root->val);
     }
-    
-    if (!root->left && !root->right) {
-        return sum == root->val;
-    }
-    return hasPathSum(root->left, sum - root->val) || 
-           hasPathSum(root->right, sum - root->val);
-}
+};
 ```
