--- a/Tree/114.flatten-binary-tree-to-linked-list.md
+++ b/Tree/114.flatten-binary-tree-to-linked-list.md
@@ -91,19 +91,19 @@ public:
         
         stack<TreeNode*> s;
         s.push(root);
-        
         TreeNode *prev = NULL;
+        
         while (!s.empty()) {
-            TreeNode *curr = s.top();
+            TreeNode *cur = s.top();
             s.pop();
             if (prev) {
                 prev->left = NULL;
-                prev->right = curr;
+                prev->right = cur;
             }
-            prev = curr;
+            prev = cur;
             
-            if (curr->right) s.push(curr->right);            
-            if (curr->left) s.push(curr->left);
+            if (cur->right) s.push(cur->right);
+            if (cur->left) s.push(cur->left);
         }
     }
 };
@@ -124,12 +124,12 @@ public:
                 TreeNode *rightTree = root->right;
                 root->left = NULL;
                 root->right = leftTree;
-
-                TreeNode *curr = root->right;
-                while (curr->right) {
-                    curr = curr->right;
+                
+                TreeNode *cur = root->right;
+                while (cur->right) {
+                    cur = cur->right;
                 }
-                curr->right = rightTree;
+                cur->right = rightTree;
             }
             
             root = root->right;
