--- a/Tree/116.populating-next-right-pointers-in-each-node.md
+++ b/Tree/116.populating-next-right-pointers-in-each-node.md
@@ -80,34 +80,55 @@ After calling your function, the tree should look like:
 
 
 ### 解法
-层序遍历, 每次从该层第一个节点开始往右扫.
-- 下一层第一个节点就是当前层第一个节点的left.
-- 左孩子的层下一个节点就是右孩子, 右孩子的层下一个节点就是下一个节点的左孩子.
+层序遍历, BFS, 使用队列, 每层依次增加指针.
+空间O(n).
 ```c++
-/**
- * Definition for binary tree with next pointer.
- * struct TreeLinkNode {
- *  int val;
- *  TreeLinkNode *left, *right, *next;
- *  TreeLinkNode(int x) : val(x), left(NULL), right(NULL), next(NULL) {}
- * };
- */
 class Solution {
 public:
     void connect(TreeLinkNode *root) {
-        if (!root) {
-            return;
-        }
+        if (!root) return;
         
-        TreeLinkNode *prev = root, *curr = NULL;
-        while (prev->left) {
-            curr = prev;
-            while (curr) {
-                curr->left->next = curr->right;
-                if (curr->next) {
-                    curr->right->next = curr->next->left;
+        queue<TreeLinkNode*> q;
+        q.push(root);
+        
+        while (!q.empty()) {
+            int n = q.size();
+            TreeLinkNode *prev = NULL;
+            for (int i = 0; i < n; i++) {
+                TreeLinkNode *cur = q.front();
+                q.pop();
+                if (cur->left) {
+                    if (prev) prev->next = cur->left;
+                    prev = cur->left;
+                    q.push(cur->left);
                 }
-                curr = curr->next;
+                if (cur->right) {
+                    if (prev) prev->next = cur->right;
+                    prev = cur->right;
+                    q.push(cur->right);
+                }
+            }
+        }
+    }
+};
+```
+
+- 下一层第一个节点就是当前层第一个节点的left.
+- 左孩子的层下一个节点就是右孩子, 右孩子的层下一个节点就是下一个节点的左孩子.
+空间O(1).
+```c++
+class Solution {
+public:
+    void connect(TreeLinkNode *root) {
+        if (!root) return;
+        
+        TreeLinkNode *prev = root, *cur = NULL;
+        while (prev->left) {
+            cur = prev;
+            while (cur) {
+                cur->left->next = cur->right;
+                if (cur->next) cur->right->next = cur->next->left;
+                cur = cur->next;
             }
             prev = prev->left;
         }
