--- a/Tree/117.populating-next-right-pointers-in-each-node-ii.md
+++ b/Tree/117.populating-next-right-pointers-in-each-node-ii.md
@@ -79,50 +79,63 @@ After calling your function, the tree should look like:
 
 
 ### 解法
-依然按层遍历, 每次需要先保存下一层的头节点以供下一层遍历.每次分别判断左右孩子, 建立next指针后记录该孩子为链表上一个节点.
+依然按层遍历. BFS, 使用队列, 空间O(n). 代码一样.
 ```c++
-/**
- * Definition for binary tree with next pointer.
- * struct TreeLinkNode {
- *  int val;
- *  TreeLinkNode *left, *right, *next;
- *  TreeLinkNode(int x) : val(x), left(NULL), right(NULL), next(NULL) {}
- * };
- */
 class Solution {
 public:
     void connect(TreeLinkNode *root) {
-        if (!root) {
-            return;
-        }
+        if (!root) return;
         
-        TreeLinkNode *curr = root, *head = NULL, *prev = NULL;
+        queue<TreeLinkNode*> q;
+        q.push(root);
         
-        while (curr) {
-            while (curr) {
-                if (curr->left) {
-                    if (!head) {
-                        head = curr->left;
-                    }
-                    else {
-                        prev->next = curr->left;
-                    }
-                    prev = curr->left;
+        while (!q.empty()) {
+            int n = q.size();
+            TreeLinkNode *prev = NULL;
+            for (int i = 0; i < n; i++) {
+                TreeLinkNode *cur = q.front();
+                q.pop();
+                if (cur->left) {
+                    if (prev) prev->next = cur->left;
+                    prev = cur->left;
+                    q.push(cur->left);
                 }
-                if (curr->right) {
-                    if (!head) {
-                        head = curr->right;
-                    }
-                    else {
-                        prev->next = curr->right;
-                    }
-                    prev = curr->right;
+                if (cur->right) {
+                    if (prev) prev->next = cur->right;
+                    prev = cur->right;
+                    q.push(cur->right);
+                }
+            }
+        }
+    }
+};
+```
+
+每次需要先保存下一层的头节点以供下一层遍历.每次分别判断左右孩子, 建立next指针后记录该孩子为链表上一个节点.
+```c++
+class Solution {
+public:
+    void connect(TreeLinkNode *root) {
+        if (!root) return;
+        
+        TreeLinkNode *cur = root, *head = NULL, *prev = NULL;
+        while (cur) {
+            while (cur) {
+                if (cur->left) {
+                    if (!head) head = cur->left;
+                    else prev->next = cur->left;
+                    prev = cur->left;
+                }
+                if (cur->right) {
+                    if (!head) head = cur->right;
+                    else prev->next = cur->right;
+                    prev = cur->right;
                 }
                 
-                curr = curr->next;
+                cur = cur->next;
             }
             
-            curr = head;
+            cur = head;
             head = NULL;
             prev = NULL;
         }
