--- a/Tree/124.binary-tree-maximum-path-sum.md
+++ b/Tree/124.binary-tree-maximum-path-sum.md
@@ -58,35 +58,24 @@ Output: 42
 
 
 ### 解法
-维护一个全局最大和. 和为左右分别最长加上当前节点, 返回为左右的最长较大者加上当前节点. 注意节点可以不取, 因此判断左右节点的最长时0为下界.
+维护一个全局最大和. 和为左右分别最长加上当前节点, 返回为左右的最长较大者加上当前节点. 
+
+注意节点可以不取, 因此判断左右节点的最长时0为下界.
 ```c++
-/**
- * Definition for a binary tree node.
- * struct TreeNode {
- *     int val;
- *     TreeNode *left;
- *     TreeNode *right;
- *     TreeNode(int x) : val(x), left(NULL), right(NULL) {}
- * };
- */
 class Solution {
 public:
     int maxPathSum(TreeNode* root) {
-        int globalSum = INT_MIN;
-        maxSumDown(root, globalSum);
-        
-        return globalSum;
+        int res = INT_MIN;
+        dfs(root, res);
+        return res;
     }
     
-    int maxSumDown(TreeNode *root, int &globalSum) {
-        if (!root) {
-            return 0;
-        }
+    int dfs(TreeNode *root, int &res) {
+        if (!root) return 0;
         
-        int leftSum = max(0, maxSumDown(root->left, globalSum));
-        int rightSum = max(0, maxSumDown(root->right, globalSum));
-        
-        globalSum = max(globalSum, leftSum + rightSum + root->val);
+        int leftSum = max(0, dfs(root->left, res));
+        int rightSum = max(0, dfs(root->right, res));
+        res = max(res, leftSum + rightSum + root->val);
         
         return max(leftSum, rightSum) + root->val;
     }
