--- a/Tree/129.sum-root-to-leaf-numbers.md
+++ b/Tree/129.sum-root-to-leaf-numbers.md
@@ -92,36 +92,22 @@ Therefore, sum = 495 + 491 + 40 = 1026.
 ### 解法
 维护全局和, 当前和. 当遇到叶子节点时当前和即为路径和, 加入到全局和中.
 ```c++
-/**
- * Definition for a binary tree node.
- * struct TreeNode {
- *     int val;
- *     TreeNode *left;
- *     TreeNode *right;
- *     TreeNode(int x) : val(x), left(NULL), right(NULL) {}
- * };
- */
 class Solution {
 public:
     int sumNumbers(TreeNode* root) {
-        int globalSum = 0;
-        int sum = 0;
-        dfs(root, sum, globalSum);
-        return globalSum;
+        int sum = 0, path = 0;
+        dfs(root, sum, path);
+        return sum;
     }
     
-    void dfs(TreeNode *root, int sum, int &globalSum) {
-        if (!root) {
-            return;
-        }
+    void dfs(TreeNode *root, int &sum, int path) {
+        if (!root) return;
         
-        sum = sum * 10 + root->val;
-        if (!root->left && !root->right) {
-            globalSum += sum;
-        }
+        path = path * 10 + root->val;
+        if (!root->left && !root->right) sum += path;
         
-        dfs(root->left, sum, globalSum);
-        dfs(root->right, sum, globalSum);
+        dfs(root->left, sum, path);
+        dfs(root->right, sum, path);
     }
 };
 ```
