--- a/Tree/144.binary-tree-preorder-traversal.md
+++ b/Tree/144.binary-tree-preorder-traversal.md
@@ -39,31 +39,19 @@ Follow up: Recursive solution is trivial, could you do it iteratively?
 ### 解法
 递归方法
 ```c++
-/**
- * Definition for a binary tree node.
- * struct TreeNode {
- *     int val;
- *     TreeNode *left;
- *     TreeNode *right;
- *     TreeNode(int x) : val(x), left(NULL), right(NULL) {}
- * };
- */
 class Solution {
 public:
     vector<int> preorderTraversal(TreeNode* root) {
-        vector<int> nodes;
-        dfs(root, nodes);
-        return nodes;
+        vector<int> res;
+        preorder(root, res);
+        return res;
     }
     
-    void dfs(TreeNode *root, vector<int> &nodes) {
-        if (!root) {
-            return;
-        }
-        nodes.push_back(root->val);
-        
-        if (root->left) dfs(root->left, nodes);
-        if (root->right) dfs(root->right, nodes);
+    void preorder(TreeNode *root, vector<int> &res) {
+        if (!root) return;
+        res.push_back(root->val);
+        preorder(root->left, res);
+        preorder(root->right, res);
     }
 };
 ```
@@ -82,15 +70,13 @@ public:
         
         stack<TreeNode*> s;
         s.push(root);
-        
         while (!s.empty()) {
-            TreeNode *node = s.top();
-            res.push_back(node->val);
+            TreeNode *cur = s.top();
             s.pop();
-            if (node->right) s.push(node->right);
-            if (node->left) s.push(node->left);
+            res.push_back(cur->val);
+            if (cur->right) s.push(cur->right);
+            if (cur->left) s.push(cur->left);
         }
-        
         return res;
     }
 };
