--- a/Tree/145.binary-tree-postorder-traversal.md
+++ b/Tree/145.binary-tree-postorder-traversal.md
@@ -38,36 +38,19 @@ Follow up: Recursive solution is trivial, could you do it iteratively?
 ### 解法
 递归方法
 ```c++
-/**
- * Definition for a binary tree node.
- * struct TreeNode {
- *     int val;
- *     TreeNode *left;
- *     TreeNode *right;
- *     TreeNode(int x) : val(x), left(NULL), right(NULL) {}
- * };
- */
 class Solution {
 public:
     vector<int> postorderTraversal(TreeNode* root) {
-        vector<int> nodes;
-        dfs(root, nodes);
-        return nodes;
+        vector<int> res;
+        postorder(root, res);
+        return res;
     }
     
-    void dfs(TreeNode *root, vector<int> &nodes) {
-        if (!root) {
-            return;
-        }
-        
-        if (root->left) {
-            dfs(root->left, nodes);
-        }
-        if (root->right) {
-            dfs(root->right, nodes);
-        }
-        
-        nodes.push_back(root->val);            
+    void postorder(TreeNode *root, vector<int> &res) {
+        if (!root) return;
+        postorder(root->left, res);
+        postorder(root->right, res);
+        res.push_back(root->val);
     }
 };
 ```
@@ -85,20 +68,17 @@ public:
         
         stack<TreeNode*> s1, s2;
         s1.push(root);
-        
         while (!s1.empty()) {
-            TreeNode *node = s1.top();
+            TreeNode *cur = s1.top();
             s1.pop();
-            s2.push(node);
-            
-            if (node->left) s1.push(node->left);
-            if (node->right) s1.push(node->right);
+            s2.push(cur);
+            if (cur->left) s1.push(cur->left);
+            if (cur->right) s1.push(cur->right);
         }
         
         while (!s2.empty()) {
-            TreeNode *node = s2.top();
+            res.push_back(s2.top()->val);
             s2.pop();
-            res.push_back(node->val);
         }
         
         return res;
