--- a/Tree/230.kth-smallest-element-in-a-bst.md
+++ b/Tree/230.kth-smallest-element-in-a-bst.md
@@ -107,20 +107,19 @@ class Solution {
 public:
     int kthSmallest(TreeNode* root, int k) {
         int res;
-        inOrder(root, k, res);
+        inorder(root, res, k);
         return res;
     }
     
-    bool inOrder(TreeNode *root, int &k, int &res) {
+    bool inorder(TreeNode* root, int &res, int &k) {
         if (!root) return false;
-        bool flag = inOrder(root->left, k, res);
+        bool flag = inorder(root->left, res, k);
         
         if (!flag) {
             res = root->val;
             k--;
             if (!k) return true;
-
-            flag = inOrder(root->right, k, res);
+            flag = inorder(root->right, res, k);
         }
         
         return flag;
