--- a/Tree/437.path-sum-iii.md
+++ b/Tree/437.path-sum-iii.md
@@ -95,23 +95,23 @@ Return 3. The paths that sum to 8 are:
 class Solution {
 public:
     int pathSum(TreeNode* root, int sum) {
-        int count = 0;
-        unordered_map<int,int> partialSums = { {0,1} };
-        backtracking(root, sum, count, partialSums, 0);
-        return count;
+        int res = 0;
+        unordered_map<int, int> preSum = { {0, 1}};
+        backtracking(root, sum, 0, res, preSum);
+        return res;
     }
     
-    void backtracking(TreeNode *root, int sum, int &count, unordered_map<int,int> &partialSums, int currSum) {
+    void backtracking(TreeNode *root, int sum, int currSum, int &res, unordered_map<int,int> &preSum) {
         if (!root) return;
         
         currSum += root->val;
-        count += partialSums[currSum - sum];
-        partialSums[currSum]++;
+        res += preSum[currSum - sum];
+        preSum[currSum]++;
         
-        backtracking(root->left, sum, count, partialSums, currSum);
-        backtracking(root->right, sum, count, partialSums, currSum);
+        backtracking(root->left, sum, currSum, res, preSum);
+        backtracking(root->right, sum, currSum, res, preSum);
         
-        partialSums[currSum]--;
+        preSum[currSum]--;
     }
 };
 ```
