--- a/Tree/538.convert-bst-to-greater-tree.md
+++ b/Tree/538.convert-bst-to-greater-tree.md
@@ -63,20 +63,17 @@ Output: The root of a Greater Tree like this:
 class Solution {
 public:
     TreeNode* convertBST(TreeNode* root) {
-        TreeNode *prev = NULL;
-        symmetricInOrder(root, prev);
+        int prev = 0;
+        inorder(root, prev);
         return root;
     }
     
-    void symmetricInOrder(TreeNode *root, TreeNode *&prev) {
+    void inorder(TreeNode *root, int &prev) {
         if (!root) return;
-        
-        symmetricInOrder(root->right, prev);
-        
-        if (prev) root->val += prev->val;
-        prev = root;
-        
-        symmetricInOrder(root->left, prev);
+        inorder(root->right, prev);
+        root->val += prev;
+        prev = root->val;
+        inorder(root->left, prev);
     }
 };
 ```
