--- a/Tree/543.diameter-of-binary-tree.md
+++ b/Tree/543.diameter-of-binary-tree.md
@@ -46,33 +46,20 @@ The length of path between two nodes is represented by the number of edges betwe
 ### 解法
 依次查看左右最大, 相加后加上当前节点.
 ```c++
-/**
- * Definition for a binary tree node.
- * struct TreeNode {
- *     int val;
- *     TreeNode *left;
- *     TreeNode *right;
- *     TreeNode(int x) : val(x), left(NULL), right(NULL) {}
- * };
- */
 class Solution {
 public:
     int diameterOfBinaryTree(TreeNode* root) {
-        int maxLen = 0;
-        traverse(root, maxLen);
-        return max(0, maxLen - 1);
+        int maxlen = 0;
+        dfs(root, maxlen);
+        return maxlen;
     }
     
-    int traverse(TreeNode *root, int &maxLen) {
-        if (!root) {
-            return 0;
-        }
-        
-        int leftLen = traverse(root->left, maxLen);
-        int rightLen = traverse(root->right, maxLen);
-        maxLen = max(maxLen, leftLen + rightLen + 1);
-        
-        return max(leftLen, rightLen) + 1;
+    int dfs(TreeNode *root, int &maxlen) {
+        if (!root) return 0;
+        int left_len = dfs(root->left, maxlen);
+        int right_len = dfs(root->right, maxlen);
+        maxlen = max(maxlen, left_len + right_len);
+        return max(left_len, right_len) + 1;
     }
 };
 ```
