--- a/Tree/572.subtree-of-another-tree.md
+++ b/Tree/572.subtree-of-another-tree.md
@@ -161,19 +161,19 @@ Return false.
 
 
 ### 解法
-先判断以当前节点为根节点的树是否与给定树相等, 再递归判断左右子树是否有相等的.
+先判断以当前节点为根节点的树是否与给定树相等, 再递归判断左右子树是否有相等的. 则又转化为判断相等树(100)问题.
 
 ```c++
 class Solution {
 public:
     bool isSubtree(TreeNode* s, TreeNode* t) {
-        return equalTree(s, t) || (s && (isSubtree(s->left, t) || isSubtree(s->right, t)));
+        return isSameTree(s, t) || (s && isSubtree(s->left, t)) || (s && isSubtree(s->right, t));
     }
     
-    bool equalTree(TreeNode *s, TreeNode *t) {
-        if (!s && !t) return true;
-        if (!s || !t) return false;
-        return s->val == t->val && equalTree(s->left, t->left) && equalTree(s->right, t->right);
+    bool isSameTree(TreeNode *root1, TreeNode *root2) {
+        if (!root1 && !root2) return true;
+        if (!root1 || !root2) return false;
+        return root1->val == root2->val && isSameTree(root1->left, root2->left) && isSameTree(root1->right, root2->right);
     }
 };
 ```
