--- a/Tree/653.two-sum-iv-input-is-a-bst.md
+++ b/Tree/653.two-sum-iv-input-is-a-bst.md
@@ -61,51 +61,61 @@ Output: False
 
 
 ### 解法
-先中序遍历得到排序数组, 再从两头分别往里遍历.
+中序遍历: 得到排序数组, 再从两头分别往里遍历.
+
+中序遍历递归写法
 ```c++
-/**
- * Definition for a binary tree node.
- * struct TreeNode {
- *     int val;
- *     TreeNode *left;
- *     TreeNode *right;
- *     TreeNode(int x) : val(x), left(NULL), right(NULL) {}
- * };
- */
 class Solution {
 public:
     bool findTarget(TreeNode* root, int k) {
-        vector<int> arr;
-        inorder(root, arr);
-        
-        int n = arr.size();
-        if (!n) {
-            return false;
-        }
-        
-        int low = 0, high = n - 1;
+        vector<int> nums;
+        inorder(root, nums);
+        int low = 0, high = int(nums.size()) - 1;
         while (low < high) {
-            if (arr[low] + arr[high] == k) {
-                return true;
-            }
-            if (arr[low] + arr[high] < k) {
-                low++;
-            }
-            else {
-                high--;
-            }
+            if (nums[low] + nums[high] == k) return true;
+            if (nums[low] + nums[high] < k) low++;
+            else high--;
         }
-        
         return false;
     }
     
-    void inorder(TreeNode *root, vector<int> &arr) {
-        if (!root) {
-            return;
+    void inorder(TreeNode *root, vector<int> &nums) {
+        if (!root) return;
+        inorder(root->left, nums);
+        nums.push_back(root->val);
+        inorder(root->right, nums);
+    }
+};
+```
+
+中序遍历非递归写法
+```c++
+class Solution {
+public:
+    bool findTarget(TreeNode* root, int k) {
+        vector<int> nums;
+        stack<TreeNode*> s;
+        TreeNode *cur = root;
+        while (!s.empty() || cur) {
+            if (cur) {
+                s.push(cur);
+                cur = cur->left;
+            }
+            else {
+                cur = s.top();
+                s.pop();
+                nums.push_back(cur->val);
+                cur = cur->right;
+            }
         }
-        inorder(root->left, arr);
-        arr.push_back(root->val);
-        inorder(root->right, arr);
+        
+        int low = 0, high = int(nums.size()) - 1;
+        while (low < high) {
+            if (nums[low] + nums[high] == k) return true;
+            if (nums[low] + nums[high] < k) low++;
+            else high--;
+        }
+        return false;
     }
 };
 ```
