--- a/Tree/094.binary-tree-inorder-traversal.md
+++ b/Tree/094.binary-tree-inorder-traversal.md
@@ -40,31 +40,19 @@ Follow up: Recursive solution is trivial, could you do it iteratively?
 ### 解法
 递归方法
 ```c++
-/**
- * Definition for a binary tree node.
- * struct TreeNode {
- *     int val;
- *     TreeNode *left;
- *     TreeNode *right;
- *     TreeNode(int x) : val(x), left(NULL), right(NULL) {}
- * };
- */
 class Solution {
 public:
     vector<int> inorderTraversal(TreeNode* root) {
-        vector<int> nodes;
-        dfs(root, nodes);
-        return nodes;
+        vector<int> res;
+        inorder(root, res);
+        return res;
     }
     
-    void dfs(TreeNode *root, vector<int> &nodes) {
-        if (!root) {
-            return;
-        }
-        
-        dfs(root->left, nodes);
-        nodes.push_back(root->val);
-        dfs(root->right, nodes);
+    void inorder(TreeNode* root, vector<int> &res) {
+        if (!root) return;
+        inorder(root->left, res);
+        res.push_back(root->val);
+        inorder(root->right, res);
     }
 };
 ```
