--- a/Tree/100.same-tree.md
+++ b/Tree/100.same-tree.md
@@ -72,25 +72,16 @@ Output: false
 
 ### 解法
 - 判断节点是否相等:
-    - 都为空 &rarr; true
-    - 一空一非空 &rarr; false
-    - 都非空且值不相等 &rarr; false
-    - 都非空且值相等 &rarr; true
-- 判断树是否相等:
-    - 节点相等
-    - 左右子树相等
+    - 都空或都非空.
+    - 节点值相等, 并且左右子树对应相等.
     
 ```c++
-bool isSameTree(TreeNode* p, TreeNode* q) {
-    if (!p && !q) {
-        return true;
+class Solution {
+public:
+    bool isSameTree(TreeNode* p, TreeNode* q) {
+        if (!p && !q) return true;
+        if (!p || !q) return false;
+        return p->val == q->val && isSameTree(p->left, q->left) && isSameTree(p->right, q->right);
     }
-    if (!p || !q) {
-        return false;
-    }
-    if (p->val != q->val) {
-        return false;
-    }
-    return isSameTree(p->left, q->left) && isSameTree(p->right, q->right);
-}
+};
 ```
