--- a/Tree/102.binary-tree-level-order-traversal.md
+++ b/Tree/102.binary-tree-level-order-traversal.md
@@ -165,14 +165,14 @@ public:
         q.push(root);
         
         while (!q.empty()) {
-            int levelSize = q.size();
+            int n = q.size();
             vector<int> level;
-            for (int i = 0; i < levelSize; i++) {
-                TreeNode *node = q.front();
+            for (int i = 0; i < n; i++) {
+                TreeNode *cur = q.front();
                 q.pop();
-                level.push_back(node->val);
-                if (node->left) q.push(node->left);
-                if (node->right) q.push(node->right);
+                level.push_back(cur->val);
+                if (cur->left) q.push(cur->left);
+                if (cur->right) q.push(cur->right);
             }
             res.push_back(level);
         }
