--- a/Tree/107.binary-tree-level-order-traversal-ii.md
+++ b/Tree/107.binary-tree-level-order-traversal-ii.md
@@ -55,51 +55,29 @@ return its bottom-up level order traversal as:
 ### 解法
 每层插入在首位
 ```c++
-/**
- * Definition for a binary tree node.
- * struct TreeNode {
- *     int val;
- *     TreeNode *left;
- *     TreeNode *right;
- *     TreeNode(int x) : val(x), left(NULL), right(NULL) {}
- * };
- */
 class Solution {
 public:
     vector<vector<int>> levelOrderBottom(TreeNode* root) {
         vector<vector<int> > res;
-        if (!root) {
-            return res;
-        }
+        if (!root) return res;
         
-        vector<int> level;
         queue<TreeNode*> q;
         q.push(root);
-        int currLen = 1, nextLen = 0;
         
         while (!q.empty()) {
-            TreeNode *node = q.front();
-            q.pop();
-            level.push_back(node->val);
-            currLen--;
-            
-            if (node->left) {
-                q.push(node->left);
-                nextLen++;
+            int n = q.size();
+            vector<int> level;
+            for (int i = 0; i < n; i++) {
+                TreeNode *cur = q.front();
+                q.pop();
+                level.push_back(cur->val);
+                if (cur->left) q.push(cur->left);
+                if (cur->right) q.push(cur->right);
             }
-            if (node->right) {
-                q.push(node->right);
-                nextLen++;
-            }
-            
-            if (!currLen) {
-                res.insert(res.begin(), level);
-                level.clear();
-                currLen = nextLen;
-                nextLen = 0;
-            }
+            res.push_back(level);
         }
         
+        reverse(res.begin(), res.end());
         return res;
     }
 };
