--- a/Tree/236.lowest-common-ancestor-of-a-binary-tree.md
+++ b/Tree/236.lowest-common-ancestor-of-a-binary-tree.md
@@ -82,32 +82,16 @@ Explanation: The LCA of nodes 5 and 4 is 5, since a node can be a descendant of 
 ### 解法
 从根节点递归查找, 如果是则返回,否则看左右, 左右都有则返回根节点, 否则返回左右那个非空的(或者null).
 ```c++
-/**
- * Definition for a binary tree node.
- * struct TreeNode {
- *     int val;
- *     TreeNode *left;
- *     TreeNode *right;
- *     TreeNode(int x) : val(x), left(NULL), right(NULL) {}
- * };
- */
 class Solution {
 public:
     TreeNode* lowestCommonAncestor(TreeNode* root, TreeNode* p, TreeNode* q) {
-        if (p == q) {
-            return p;
-        }
+        if (p == q) return p;
+        if (!root || p == root || q == root) return root;
         
-        if (!root | root == p || root == q) {
-            return root;
-        }
-        TreeNode *leftAncestor = lowestCommonAncestor(root->left, p, q);
-        TreeNode *rightAncestor = lowestCommonAncestor(root->right, p, q);
+        TreeNode *left = lowestCommonAncestor(root->left, p, q);
+        TreeNode *right = lowestCommonAncestor(root->right, p, q);
         
-        if (leftAncestor && rightAncestor) {
-            return root;
-        }
-        return leftAncestor ? leftAncestor : rightAncestor;
+        return left && right ? root : (left ? left : right);
     }
 };
 ```
