--- a/Tree/257.binary-tree-paths.md
+++ b/Tree/257.binary-tree-paths.md
@@ -42,27 +42,25 @@ Explanation: All root-to-leaf paths are: 1->2->5, 1->3
 
 ### 解法
 递归. 传递参数为到当前节点的val. 如果是叶子节点则将信息字符串加入数组. 递归对左右子树分别相同操作.
+
+注意终止条件为是否是叶子而非是否为空.
 ```c++
-vector<string> binaryTreePaths(TreeNode* root) {
-	vector<string> result;
-	if (!root) {
-		return result;
-	}
-	binaryTreePaths(result, root, to_string(root->val));
-	
-	return result;
-}
-void binaryTreePaths(vector<string>& result, TreeNode* root, string t) {
-	if (!root->left && !root->right) {
-		result.push_back(t);
-		return;
-	}
-	if (root->left) {
-		binaryTreePaths(result, root->left, t + "->" + to_string(root->left->val));
-	}
-	if (root->right) {
-		binaryTreePaths(result, root->right, t + "->" + to_string(root->right->val));
-	}
-	
-}
+class Solution {
+public:
+    vector<string> binaryTreePaths(TreeNode* root) {
+        vector<string> res;
+        if (root) dfs(res, root, to_string(root->val));
+        return res;
+    }
+    
+    void dfs(vector<string> &res, TreeNode *root, string path) {
+        if (!root->left && !root->right) {
+            res.push_back(path);
+            return;
+        }
+        
+        if (root->left) dfs(res, root->left, path + "->" + to_string(root->left->val));
+        if (root->right) dfs(res, root->right, path + "->" + to_string(root->right->val));
+    }
+};
 ```
