--- a/Tree/337.house-robber-iii.md
+++ b/Tree/337.house-robber-iii.md
@@ -77,15 +77,12 @@ Explanation:Maximum amount of money the thief can rob = 4 + 5 = 9.
 class Solution {
 public:
     int rob(TreeNode* root) {
-        if (!root) {
-            return 0;
-        }
-        int leftRob = root->left ? rob(root->left->left) + rob(root->left->right) : 0;
-        int rightRob = root->right ? rob(root->right->left) + rob(root->right->right) : 0;
-        int withRoot = root->val + leftRob + rightRob;
-        int withoutRoot = rob(root->left) + rob(root->right);
+        if (!root) return 0;
         
-        return max(withoutRoot, withRoot);
+        int no_left = root->left ? rob(root->left->left) + rob(root->left->right) : 0;
+        int no_right = root->right ? rob(root->right->left) +rob(root->right->right) : 0;
+        
+        return max(root->val + no_left + no_right, rob(root->left) + rob(root->right));
     }
 };
 ```
