--- a/Tree/404.sum-of-left-leaves.md
+++ b/Tree/404.sum-of-left-leaves.md
@@ -35,23 +35,16 @@ There are two left leaves in the binary tree, with values 9 and 15 respectively.
 ### 解法
 遍历二叉树, 增加一个向左向右的标记, 当到达叶子节点时检查标记是否为左, 是则加val.
 ```c++
-int getLeftSum(TreeNode *root, int sum, bool leftFlag) {
-	if (!root->left && !root->right && leftFlag) {
-		sum += root->val;
-		return sum;
-	}
-	if (root->left) {
-		sum = getLeftSum(root->left, sum, true);
-	}
-	if (root->right) {
-		sum = getLeftSum(root->right, sum, false);
-	}
-	return sum;
-}
-int sumOfLeftLeaves(TreeNode* root) {
-	if (!root) {
-		return 0;
-	}
-	return getLeftSum(root, 0, false);
-}
+class Solution {
+public:
+    int sumOfLeftLeaves(TreeNode* root) {
+        if (!root) return 0;
+        
+        int leftSum = 0, rightSum = 0;
+        if (root->left) leftSum += (!root->left->left && !root->left->right) ? root->left->val : sumOfLeftLeaves(root->left);
+        if (root->right) rightSum += sumOfLeftLeaves(root->right);
+        
+        return leftSum + rightSum;
+    }
+};
 ```
