--- a/Tree/617.merge-two-binary-trees.md
+++ b/Tree/617.merge-two-binary-trees.md
@@ -110,14 +110,11 @@ public:
     TreeNode* mergeTrees(TreeNode* t1, TreeNode* t2) {
         if (!t1 && !t2) return NULL;
         
-        int val1 = t1 ? t1->val : 0;
-        int val2 = t2 ? t2->val : 0;
+        TreeNode *t = new TreeNode((t1 ? t1->val : 0) + (t2 ? t2->val : 0));
+        t->left = mergeTrees(t1 ? t1->left : NULL, t2 ? t2->left : NULL);
+        t->right = mergeTrees(t1 ? t1->right : NULL, t2 ? t2->right : NULL);
         
-        TreeNode *root = new TreeNode(val1 + val2);
-        root->left = mergeTrees(t1 ? t1->left : NULL, t2 ? t2->left : NULL);
-        root->right = mergeTrees(t1 ? t1->right : NULL, t2 ? t2->right : NULL);
-        
-        return root;
+        return t;
     }
 };
 ```
