--- a/Tree/700.search-in-a-binary-search-tree.md
+++ b/Tree/700.search-in-a-binary-search-tree.md
@@ -105,16 +105,26 @@ Note that an empty tree is represented by NULL, therefore you would see the expe
 
 
 ### 解法
-小则左边, 大则右边, 相等则返回.
+递归
 ```c++
 class Solution {
 public:
     TreeNode* searchBST(TreeNode* root, int val) {
-        TreeNode *cur = root;
-        while (cur) {
-            if (val == cur->val) return cur;
-            if (val < cur->val) cur = cur->left;
-            else cur = cur->right;
+        if (!root) return NULL;
+        if (root->val == val) return root;
+        return root->val > val ? searchBST(root->left, val) : searchBST(root->right, val);
+    }
+};
+```
+
+非递归
+```c++
+class Solution {
+public:
+    TreeNode* searchBST(TreeNode* root, int val) {
+        while (root) {
+            if (root->val == val) return root;
+            root = root->val > val ? root->left : root->right;
         }
         return NULL;
     }
